--- a/doc/ugtitle.tex
+++ b/doc/ugtitle.tex
@@ -1,4 +1,4 @@
-iffalse
+\iffalse
 Copyright (c) 2016, Los Alamos National Security, LLC
 All rights reserved.
 
@@ -37,7 +37,7 @@ BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER
 IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 POSSIBILITY OF SUCH DAMAGE.
-i
+\fi
 
 %~---------------------------------------------------------------------------~%
 % Copyright (c) 2014 Los Alamos National Security, LLC
